# hello-spock

./: README.md  db.txt  hello-spock.cabal  pg.cfg  stack.yaml
src/: Db.hs  Main.hs
