name:                hello-spock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lykrysh/hello-spock#readme
license:             BSD3
license-file:        LICENSE
author:              lykrysh
maintainer:          lykrysh@email.com
copyright:           none
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-spock
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , Spock
                      , Spock-lucid
                      , lucid
                      , text
                      , aeson
                      , persistent
                      , persistent-postgresql
                      , persistent-template
                      , monad-logger

